kubernetes_config/externalphp-service.yml
kind: Service
apiVersion: v1
metadata:
 name: externalphp-service
spec:
 type: NodePort
 ports:
 - port: 8181
   targetPort: 8181
