kubernetes_config/externalpython-endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
 name: externalpython-service
subsets:
 - addresses:
     - ip: 192.168.99.1
   ports:
     - port: 8080
