kubernetes_config/externalpython-service.yml
kind: Service
apiVersion: v1
metadata:
 name: externalpython-service
spec:
 type: ClusterIP
 ports:
 - port: 8080
   targetPort: 8080
