kubernetes_config/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
