kubernetes_config/spring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
